# kuwahara-filter-wgpu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/shaders/: blur.wgsl  edge.wgsl  kuwahara.wgsl
