[package]
name = "kuwahara-filter-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bytemuck = "1.22"
env_logger = "0.11"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
load_image = "3.2.1"
log = "0.4.26"
tokio = { version = "1.44.1", features = ["full"] }
wgpu = "25.0.0"


